# LCD_H7

./: .mxproject  CMakeLists.txt  LCD_H7.ioc  README_OpenOCD.md  STM32H723XG_FLASH.ld  build_and_flash.bat  flash.bat  openocd.cfg
Drivers/lvgl/: CMakeLists.txt  lv_conf.h
Drivers/lvgl/examples/porting/: lv_port_disp.c
Inc/: main.h
Inc/hw/LCD/: st7789.h
Inc/mw/display/: display.h  display_extlib.h
Src/: gpio.c  main.c  spi.c  stm32h7xx_it.c  usart.c
Src/hw/LCD/: lcd_fonts.c  st7789.c
Src/mw/display/: display.c  display_extlib.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
